--- a/Discover-Commons/res/values/strings_login.xml
+++ b/Discover-Commons/res/values/strings_login.xml
@@ -13,7 +13,7 @@
         Register\nNow
     </string>
     <string name="forgot_id_or_pass_text">
-        Forgot User ID/Password?
+        Forgot Password?
     </string>
     <string name="card">
         Card Login
