--- a/Discover-Commons/res/values/strings_login.xml
+++ b/Discover-Commons/res/values/strings_login.xml
@@ -6,6 +6,9 @@
     <string name="customer_service">
         Customer\nService
     </string>
+        <string name="contact_us_wrap">
+        Contact\nUs
+    </string>
     <string name="privacy_and_security">
         Privacy &amp; Terms
     </string>
