DE2960 - Likely solves baseline issue, but don't have one with me right now to verify.

--- a/Discover-Bank-Phone/res/values/dimen_whitepanel.xml
+++ b/Discover-Bank-Phone/res/values/dimen_whitepanel.xml
@@ -8,4 +8,5 @@
     <dimen name="element_side_padding">22dp</dimen>
     <dimen name="element_top_padding">16dp</dimen>
     
+    <dimen name="toggle_padding">8dp</dimen>
 </resources>
