--- a/Discover-Bank-Phone/res/layout/login_start.xml
+++ b/Discover-Bank-Phone/res/layout/login_start.xml
@@ -247,7 +247,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerInParent="true"
-                                android:padding="8dp"
+                                android:paddingTop="@dimen/toggle_padding"
+                                android:paddingBottom="@dimen/toggle_padding"
                                 android:singleLine="true"
                                 android:text="@string/card"
                                 android:textColor="@color/title"
@@ -282,7 +283,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:padding="8dp"
+                            android:paddingTop="@dimen/toggle_padding"
+                                android:paddingBottom="@dimen/toggle_padding"
                             android:singleLine="true"
                             android:text="@string/bank"
                             android:textColor="@color/title"
