ID: US5793 Name: Android: Not Eligible
Tested:
- Deposit Not Eligible page displayed if user is not eligible
- Deposit Not Eligible page displayed if user does not have an eligible account
- Verified layout is rendered as per comps/AC in both portrait and landscape
- Verified when Need Help number is tapped it opens dialer with the need help number populated
- Verified when tap on Open an Account that the user is navigated to Big Browser using discover URL
- Verified user can open navigation menu from this screen

--- a/Discover-Bank-Phone/res/layout/bank_deposit_forbidden.xml
+++ b/Discover-Bank-Phone/res/layout/bank_deposit_forbidden.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/forms_inner_padding"
+    android:paddingLeft="@dimen/forms_inner_padding" 
+	android:paddingBottom="@dimen/forms_inner_padding"
     android:background="@drawable/light_gray_bkgrd"  >
 
     <ImageButton
@@ -19,6 +20,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/help"
+        android:layout_marginTop="@dimen/forms_inner_padding"
+        android:layout_marginRight="@dimen/forms_inner_padding"
         android:layout_marginBottom="@dimen/table_inner_padding"
         android:text="@string/bank_deposit_forbidden_title" />
 
@@ -39,6 +42,7 @@
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/top_note_text"
         android:layout_centerHorizontal="true"
+        android:layout_marginRight="@dimen/forms_inner_padding"
         android:layout_marginTop="@dimen/modal_footer_topmargin"
         android:focusable="true"
         android:focusableInTouchMode="true"
