--- a/Discover-Bank-Phone/res/values/strings_bank_deposit.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_deposit.xml
@@ -19,6 +19,10 @@
     <string name="bank_deposit_received_confirmation">Confirmation #: </string>
     <string name="bank_deposit_received_note">Note</string>
     <string name="bank_deposit_received_notetext">You will be receiving a confirmation e-mail shortly. Please retain your check in a safe place for at least 60 days. Checks deposited before {0} will be posted to your account on the next business day.</string>
+    <string name="bank_deposit_noteligible_title">Sign Up for Mobile\nCheck Deposit</string>
+    <string name="bank_deposit_noteligible_body">Enjoy the ease and convenience of Mobile Check Deposit.\n\nTo start, simply open up a Money Market or Discover Savings account.</string>
+    <string name="bank_deposit_noteligible_number">1&#8211;800&#8211;347&#8211;7000</string>
+   
     <string name="capture">Capture</string>
     <string name="picture_confirm">Confirm</string>
     <string name="front">Front</string>
