US5829 : TA13786 - Create UI. Added a class that handles scaling images so that the loaded check images now fill their container properly. Attached navigational click listeners to the list items to allow the user to navigate back to select account or select amount to update their provided information. Began adding modal dialogs that warn the user that if they choose to back out of the process that their information will be lost. Added  the handling of passing data around through the navigation flows, which includes re-taking images and changing the amount and accounts. Added the disabling of the accept button in accept terms and conditions if the content is not yet loaded or does not load properly. Added a re-check if a user changes their account and then the new account cannot accept the amount they want to deposit. Updated the modal default two button dialog to have a gradient separator instead of a solid line between the buttons. As this is what the comps look like.

--- a/Discover-Bank-Phone/res/layout/payment_terms_and_conditions.xml
+++ b/Discover-Bank-Phone/res/layout/payment_terms_and_conditions.xml
@@ -62,7 +62,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="@string/accept" />
+            android:text="@string/accept" 
+            android:enabled="false"/>
 
         <TextView
             android:id="@+id/acceptance_label"
