--- a/Discover-Commons/res/layout/modal_default_two_button_bottom.xml
+++ b/Discover-Commons/res/layout/modal_default_two_button_bottom.xml
@@ -6,11 +6,11 @@
     android:layout_marginLeft="@dimen/forms_inner_padding">
     
         
-    <ImageView
+    <View
         android:id="@+id/modal_alert_divider"
         android:layout_width="fill_parent"
         android:layout_height="5dp"
-        android:background="@drawable/modal_divider_line"
+        android:background="@drawable/shadow_gradient"
         android:layout_above="@+id/modal_ok_button"
         android:visibility="visible"/>
     
