--- a/Discover-Bank-Phone/res/layout/check_deposit_modal.xml
+++ b/Discover-Bank-Phone/res/layout/check_deposit_modal.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center" 
-    android:paddingTop="@dimen/modal_top_padding"
+    android:paddingTop="@dimen/groups_of_elements_padding"
     android:paddingLeft="@dimen/groups_of_elements_padding"
     android:paddingRight="@dimen/groups_of_elements_padding"
     android:paddingBottom="@dimen/modal_top_padding">
