--- a/Discover-Bank-Phone/res/layout/review_check_deposit_cell.xml
+++ b/Discover-Bank-Phone/res/layout/review_check_deposit_cell.xml
@@ -73,23 +73,19 @@
         android:orientation="horizontal"
         android:weightSum="2" >
 
-        <ImageView
+        <com.discover.mobile.bank.ui.widgets.ScalableImage
             android:id="@+id/check_front_image"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             android:layout_marginRight="4dp"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            android:contentDescription="@string/empty" />
+            android:layout_weight="1" />
 
-        <ImageView
+        <com.discover.mobile.bank.ui.widgets.ScalableImage
             android:id="@+id/check_back_image"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_marginLeft="4dp"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            android:contentDescription="@string/empty" />
+            android:layout_weight="1" />
     </LinearLayout>
 
 </RelativeLayout>
