US5829 : Navigation. Fixed modal dialogs for the check deposit review page and improved navigation throughout the deposit flow. Added server call to the last step of check deposit and tested that it submits and works as expected. The navigation during this step is still incomplete. Henry is working on Error handling for this server call. Updated the BankNavigationRootActivity onBackPress handling with suggestions from Henry and Jon to fix an issue that was happening with the back button and Fragment navigation.

--- a/Discover-Bank-Phone/res/values/strings_bank_payment.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payment.xml
@@ -44,7 +44,7 @@
 	<!-- Schedule Payments -->
 	<string name="payee">Payee</string>
 	<string name="accept">Accept</string>
-	<string name="acceptance_text">By tapping on Accept, I \nagree to the Terms of Use.</string>
+	<string name="acceptance_text">By tapping on Accept, I agree to the Terms of Use.</string>
  	<string name="schedule_pay_payee">Payee</string>
  	<string name="schedule_pay_from">Pay From</string>
  	<string name="schedule_pay_amount">Amount</string>
