--- a/Discover-Bank-Phone/res/layout/review_check_deposit_cell.xml
+++ b/Discover-Bank-Phone/res/layout/review_check_deposit_cell.xml
@@ -88,4 +88,15 @@
             android:layout_weight="1" />
     </LinearLayout>
 
+     <TextView
+            android:id="@+id/error_label"
+            style="@style/error_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/text_row"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/text_row"
+            android:singleLine="true"
+            android:text="@string/bank_invalid_characters" />
+    
 </RelativeLayout>
